Og-image and a little more

--- a/src/index.html
+++ b/src/index.html
@@ -513,8 +513,7 @@
         <div class="col-sm-6 col-sm-offset-3">
           <div class="text">
             <h2>Bedövningen</h2>
-            <p>I Sverige är det olagligt att utföra slakt utan bedövning, sedan finns det utländskt kött som inte följer dessa lagar. Den vanligaste orsaken  till att inte använda bedövning är på grund av ekonomiska skäl. Det är billigare helt enkelt.</p>
-            <hr>
+            <p>All slakt i Sverige utförs med bedövning, inklusive religiös slakt så som Halal och Kosher. Sedan finns det utländskt kött som inte följer dessa lagar. En av orsakerna till att inte använda bedövning är på grund av ekonomiska skäl. Det är billigare helt enkelt.</p>
           </div>
         </div>
       </div>
@@ -559,6 +558,27 @@
           <img src="assets/img/steam.svg" class="steam two">
           <img src="assets/img/steam.svg" class="steam three">
           <img src="assets/img/gas.svg" class="primary_img">
+      </div>
+    </div>
+  </div>
+
+
+
+  <div class="del21">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-6 col-sm-offset-3">
+          <div class="text text-center">
+            <h3><strong>Bedövning med bultpistol</strong></h3>
+            <p>Kor, kalvar och tjurar bedövas genom att skjutas i huvudet med en bultpistol. 65% av allt nötkött i Sverige kommer från djur inom mjölkindustrin. <a href="http://www.djurensratt.se/vara-fragor/djur-i-livsmedelsindustrin/kor-kalvar-tjurar" target="_blank" class="source light"><span class="glyphicon glyphicon-share-alt"></span> Källa</a></p>
+            <p>På bilden nedan ser ni en Cash special caliber 22</a>. <a href="http://nodslakt.se/Bultpistol.html" target="_blank" class="source light"><span class="glyphicon glyphicon-share-alt"></span> Källa</a></p>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-10 col-sm-offset-1">
+          <img src="assets/img/stunner.svg" class="primary_img">
+        </div>
       </div>
     </div>
   </div>
