--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
   <meta property="og:title" content="Berättelsen om köttet">
   <meta property="og:description" content="Köttet.se är en gripande berättelse om det kött som 90% av Sveriges befolkning äter varje dag.">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="https://kottet.se/assets/img/og.png">
+  <meta property="og:image" content="https://kottet.se/og.png">
   <meta property="og:url" content="https://kottet.se">
 
   <!--
@@ -28,28 +28,7 @@
   <link rel="dns-prefetch" href="//kottet.se">
   -->
 
-  <!--
-  <link rel="shortcut icon" href="favicon.ico">
-  <link rel="icon" sizes="16x16 32x32 64x64" href="favicon.ico">
-  <link rel="apple-touch-icon-precomposed" sizes="57x57" href="assets/img/favicon/apple-touch-icon-57x57.png" />
-  <link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/img/favicon/apple-touch-icon-114x114.png"/>
-  <link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/img/favicon/apple-touch-icon-72x72.png" />
-  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/img/favicon/apple-touch-icon-144x144.png" />
-  <link rel="apple-touch-icon-precomposed" sizes="60x60" href="assets/img/favicon/apple-touch-icon-60x60.png" />
-  <link rel="apple-touch-icon-precomposed" sizes="120x120" href="assets/img/favicon/apple-touch-icon-120x120.png" />
-  <link rel="apple-touch-icon-precomposed" sizes="76x76" href="assets/img/favicon/apple-touch-icon-76x76.png" />
-  <link rel="apple-touch-icon-precomposed" sizes="152x152" href="assets/img/favicon/apple-touch-icon-152x152.png" />
-  <link rel="icon" type="image/png" href="assets/img/favicon/favicon-196x196.png" sizes="196x196" />
-  <link rel="icon" type="image/png" href="assets/img/favicon/favicon-96x96.png" sizes="96x96" />
-  <link rel="icon" type="image/png" href="assets/img/favicon/favicon-32x32.png" sizes="32x32" />
-  <link rel="icon" type="image/png" href="assets/img/favicon/favicon-16x16.png" sizes="16x16" />
-  <link rel="icon" type="image/png" href="assets/img/favicon/favicon-128.png" sizes="128x128" />
-  <meta name="msapplication-TileImage" content="assets/img/favicon/mstile-144x144.png" />
-  <meta name="msapplication-square70x70logo" content="assets/img/favicon/mstile-70x70.png" />
-  <meta name="msapplication-square150x150logo" content="assets/img/favicon/mstile-150x150.png" />
-  <meta name="msapplication-wide310x150logo" content="assets/img/favicon/mstile-310x150.png" />
-  <meta name="msapplication-square310x310logo" content="assets/img/favicon/mstile-310x310.png" />
-  -->
+  <!-- favicons -->
 
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,700' rel='stylesheet' type='text/css'>
 
