--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,7 @@
   <div class="hero">
     <a href="/"><img src="assets/img/logo_color.svg" class="logo" alt="Köttet"></a>
     <div class="divider"></div>
-    <a href="/"><img src="assets/img/vegosvar.svg" class="creds" alt="Köttet"></a>
+    <a href="https://vegosvar.se"><img src="assets/img/vegosvar.svg" class="creds" alt="Köttet"></a>
   </div>
 
 
@@ -225,7 +225,7 @@
         <div class="row">
           <div class="col-xs-3 chicken">
             <div class="stat">
-              <div class="content" style="height: 96%;"><img src="assets/img/icon_chicken.svg"></div>
+              <div class="content" data-percentage="96" style="height: 0%;"><img src="assets/img/icon_chicken.svg"></div>
             </div>
             <div class="numbers">
               <span class="counter">83,265,440</span>
@@ -234,7 +234,7 @@
           </div>
           <div class="col-xs-3 pig">
             <div class="stat">
-              <div class="content" style="height: 3%;"><img src="assets/img/icon_pig.svg"></div>
+              <div class="content" data-percentage="3" style="height: 0%;"><img src="assets/img/icon_pig.svg"></div>
             </div>
             <div class="numbers">
               <span class="counter">2,550,710</span>
@@ -243,7 +243,7 @@
           </div>
           <div class="col-xs-3 cow">
             <div class="stat">
-              <div class="content" style="height: 0.5%;"><img src="assets/img/icon_cow.svg"></div>
+              <div class="content" data-percentage="0.5" style="height: 0%;"><img src="assets/img/icon_cow.svg"></div>
             </div>
             <div class="numbers">
               <span class="counter">417,390</span>
@@ -252,7 +252,7 @@
           </div>
           <div class="col-xs-3 lamb">
             <div class="stat">
-              <div class="content" style="height: 0.3%;"><img src="assets/img/icon_lamb.svg"></div>
+              <div class="content" data-percentage="0.3" style="height: 0%;"><img src="assets/img/icon_lamb.svg"></div>
             </div>
             <div class="numbers">
               <span class="counter">252,880</span>
@@ -422,17 +422,17 @@
             <div class="row">
               <div class="col-xs-4">
                 <div class="stat">
-                  <div class="content greenhouse_gas_emissions" style="height: 19%;"><div class="numbers"><span class="counter">19</span>%</div></div>
+                  <div class="content greenhouse_gas_emissions" style="height: 0%;"><div class="numbers"><span class="counter">19</span>%</div></div>
                 </div>
               </div>
               <div class="col-xs-4">
                 <div class="stat">
-                  <div class="content land_use" style="height: 38%;"><div class="numbers"><span class="counter">38</span>%</div></div>
+                  <div class="content land_use" style="height: 0%;"><div class="numbers"><span class="counter">38</span>%</div></div>
                 </div>
               </div>
               <div class="col-xs-4">
                 <div class="stat">
-                  <div class="content water_use" style="height: 70%;"><div class="numbers"><span class="counter">70</span>%</div></div>
+                  <div class="content water_use" style="height: 0%;"><div class="numbers"><span class="counter">70</span>%</div></div>
                 </div>
               </div>
             </div>
