--- a/src/index.html
+++ b/src/index.html
@@ -201,7 +201,7 @@
       <div class="row">
         <div class="col-sm-8 col-sm-offset-2">
           <div class="text text-center">
-            <h2><span class="lg"><span class="counter">90</span>%</span> av alla svenskar äter kött idag <a href="http://www.djurensratt.se/om-djurens-ratt/nyheter/var-tionde-svensk-ar-vegetarian" target="_blank" class="source dark"><span class="glyphicon glyphicon-share-alt"></span> Källa</a></h2>
+            <h2><span class="lg"><span class="counter notranslate">90</span>%</span> av alla svenskar äter kött idag <a href="http://www.djurensratt.se/om-djurens-ratt/nyheter/var-tionde-svensk-ar-vegetarian" target="_blank" class="source dark"><span class="glyphicon glyphicon-share-alt"></span> Källa</a></h2>
             <p>Med en så stor efterfrågan... hur ser industrin ut?</p>
           </div>
         </div>
@@ -225,7 +225,7 @@
         <div class="row">
           <div class="col-xs-3 chicken">
             <div class="stat">
-              <div class="content" data-percentage="96" style="height: 0%;"><img src="assets/img/icon_chicken.svg"></div>
+              <div class="content" style="height: 96%;"><img src="assets/img/icon_chicken.svg"></div>
             </div>
             <div class="numbers">
               <span class="counter">83,265,440</span>
@@ -234,7 +234,7 @@
           </div>
           <div class="col-xs-3 pig">
             <div class="stat">
-              <div class="content" data-percentage="3" style="height: 0%;"><img src="assets/img/icon_pig.svg"></div>
+              <div class="content" style="height: 3%;"><img src="assets/img/icon_pig.svg"></div>
             </div>
             <div class="numbers">
               <span class="counter">2,550,710</span>
@@ -243,7 +243,7 @@
           </div>
           <div class="col-xs-3 cow">
             <div class="stat">
-              <div class="content" data-percentage="0.5" style="height: 0%;"><img src="assets/img/icon_cow.svg"></div>
+              <div class="content" style="height: 0.5%;"><img src="assets/img/icon_cow.svg"></div>
             </div>
             <div class="numbers">
               <span class="counter">417,390</span>
@@ -252,7 +252,7 @@
           </div>
           <div class="col-xs-3 lamb">
             <div class="stat">
-              <div class="content" data-percentage="0.3" style="height: 0%;"><img src="assets/img/icon_lamb.svg"></div>
+              <div class="content" style="height: 0.3%;"><img src="assets/img/icon_lamb.svg"></div>
             </div>
             <div class="numbers">
               <span class="counter">252,880</span>
@@ -422,17 +422,17 @@
             <div class="row">
               <div class="col-xs-4">
                 <div class="stat">
-                  <div class="content greenhouse_gas_emissions" style="height: 0%;"><div class="numbers"><span class="counter">19</span>%</div></div>
+                  <div class="content greenhouse_gas_emissions" style="height: 19%;"><div class="numbers"><span class="counter notranslate">19</span>%</div></div>
                 </div>
               </div>
               <div class="col-xs-4">
                 <div class="stat">
-                  <div class="content land_use" style="height: 0%;"><div class="numbers"><span class="counter">38</span>%</div></div>
+                  <div class="content land_use" style="height: 38%;"><div class="numbers"><span class="counter notranslate">38</span>%</div></div>
                 </div>
               </div>
               <div class="col-xs-4">
                 <div class="stat">
-                  <div class="content water_use" style="height: 0%;"><div class="numbers"><span class="counter">70</span>%</div></div>
+                  <div class="content water_use" style="height: 70%;"><div class="numbers"><span class="counter notranslate">70</span>%</div></div>
                 </div>
               </div>
             </div>
@@ -449,7 +449,7 @@
       <div class="row">
         <div class="col-sm-6">
           <div class="text">
-            <h2>Dessutom går <span class="procent"><span class="counter">90</span>%</span> av biomassan förlorad genom djuren</h2>
+            <h2>Dessutom går <span class="procent"><span class="counter notranslate">90</span>%</span> av biomassan förlorad genom djuren</h2>
             <p>För varje steg i näringspyramiden så går energi förlorad. Det beror på att djuren förbrukar upp biomassan för att producera värme åt sig själv bland annat. </p>
             <p>Näringskedjor har vanligtvis endast tre eller fyra nivåer på grund av detta. <a href="http://publications.lib.chalmers.se/records/fulltext/72641.pdf" target="_blank" class="source dark"><span class="glyphicon glyphicon-share-alt"></span> Källa</a></p>
           </div>
