--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
   <title>Berättelsen om köttet</title>
 
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Köttet.se är en gripande berättelse om det kött som 90% av Sveriges befolkning äter varje dag.">
   <meta name="keywords" content="kött,köttindustri">
   <meta name="robots" content="all">
@@ -267,7 +268,7 @@
   <div class="del9">
     <div class="container">
       <div class="row">
-        <div class="col-xs-5 col-lg-4">
+        <div class="col-sm-5 col-lg-4">
           <div class="text">
             <img src="assets/img/profile_cow.svg" alt="Ko illustration" class="primary_img showMobile">
             <h2>First up, kossan</h2>
@@ -289,7 +290,7 @@
   <div class="del10">
     <div class="container">
       <div class="row">
-        <div class="col-xs-5 col-lg-4">
+        <div class="col-sm-5 col-lg-4">
           <div class="text">
             <img src="assets/img/profile_lamb.svg" alt="Lamm illustration" class="primary_img showMobile">
             <h2>Lammen</h2>
@@ -310,7 +311,7 @@
   <div class="del11">
     <div class="container">
       <div class="row">
-        <div class="col-xs-5 col-lg-4">
+        <div class="col-sm-5 col-lg-4">
           <div class="text">
             <img src="assets/img/profile_pig.svg" alt="Gris illustration" class="primary_img showMobile">
             <h2>Grisen</h2>
@@ -330,7 +331,7 @@
   <div class="del12">
     <div class="container">
       <div class="row">
-        <div class="col-xs-5 col-lg-4">
+        <div class="col-sm-5 col-lg-4">
           <div class="text">
             <img src="assets/img/profile_chicken.svg" alt="Kyckling illustration" class="primary_img showMobile">
             <h2>Kycklingen</h2>
@@ -568,7 +569,7 @@
         <div class="col-sm-6 col-sm-offset-3">
           <div class="text">
             <h2>Avblodning</h2>
-            <p>Efter medvetslöshet så får djuret halsen uppskuren. Blodet tappas av och djuret dör. Ibland kan djuret vakna upp under processen. <a href="http://www.djurensratt.se/vara-fragor/djur-i-livsmedelsindustrin/kor-kalvar-tjurar" target="_blank" class="source light"><span class="glyphicon glyphicon-share-alt"></span> Källa</a></p>
+            <p>Därefter får djuret halsen uppskuren. Blodet tappas av och djuret dör. Om avblodningen går alltför långsamt kan ett bedövat djur hinna återfå medvetandet innan avblodningen är avslutad.  <a href="http://www2.jordbruksverket.se/webdav/files/SJV/trycksaker/Pdf_jo/jo09_14.pdf" target="_blank" class="source light"><span class="glyphicon glyphicon-share-alt"></span> Källa</a></p>
           </div>
         </div>
       </div>
@@ -586,11 +587,27 @@
           <div class="text">
             <h2>Vidare till försäljning</h2>
             <p>Djuret skärs upp och säljs vidare.</p>
+            <p>Köttet åker vidare till restauranger och mataffärer. På många skolor och dagis är kött ett förstahandsval idag. Det betyder att barnen aktivt måste be om djurfri mat om de inte vill äta kött.</p>
           </div>
         </div>
       </div>
     </div>
+
     <div class="machine"></div>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-4">
+          <p><img src="assets/img/kid.svg"></p>
+        </div>
+        <div class="col-sm-4">
+          <p><img src="assets/img/store.svg"></p>
+        </div>
+        <div class="col-sm-4">
+          <p><img src="assets/img/fast_food.svg"></p>
+        </div>
+      </div>
+    </div>
   </div>
 
 
