Corrections from Jeremy

--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
 
   <!-- favicons -->
 
-  <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,700' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,700' rel='stylesheet' type='text/css'>
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/css/style.css">
@@ -88,8 +88,8 @@
 
           <div class="divider"></div>
           <h1>Berättelsen om köttet</h1>
-          <p class="preamble">Varmt välkommen till berättelsen om köttindustrin i Sverige</p>
-          <p>Människan har utvecklats snabbt. Vi har rest till månen och uppfunnit selfie sticks.<br/>Men något som lever kvar är vår köttkonsumtion. Vi bara älskar kött.</p> 
+          <p class="preamble">Varmt välkommen till berättelsen om den svenska köttindustrin</p>
+          <p>Människan har utvecklats snabbt. Vi har rest till månen och uppfunnit selfiepinnen.<br/>Men något som lever kvar är vår köttkonsumtion. Vi bara älskar kött.</p> 
           <p>Kött är för många en självklarhet, för andra är det en jobbig verklighet.<br/>Men vilka hemligheter döljer sig i det svenska köttet?</p>
 
           <img src="assets/img/hero_earth.svg" class="earth">
@@ -134,7 +134,7 @@
         </div>
         <div class="col-sm-7 col-sm-offset-0 col-md-7 col-md-offset-1">
           <div class="text">
-            <h2>Vi började uppfinna verktyg</h2>
+            <h2>Vi började uppfinna verktyg...</h2>
             <p>Med tiden blev vi smartare och hittade nya lösningar för att underlätta vår tillvaro, med hjälp av våra händer så började vi att tillverka saker.</p>
           </div>
         </div>
@@ -151,9 +151,9 @@
         </div>
         <div class="col-sm-7 col-sm-offset-0 col-md-7 col-md-offset-1">
           <div class="text">
-            <h2>Och även vapen</h2>
-            <p>Människan är varken köttätare eller växtätare, vi är däremot allätare. Det betyder att vi kan välja själv mellan att äta andra djur eller vegetabilisk föda. <a href="http://www.ne.se/uppslagsverk/encyklopedi/l%C3%A5ng/all%C3%A4tare" target="_blank" class="source light"><span class="glyphicon glyphicon-share-alt"></span> Källa</a></p>
-            <p>Tillvaron under äldre stenåldern (ca 40 000-10 000 f.Kr) styrdes helt och hållet av jakten på föda vilket gjorde att vi följde bytesdjurens fotspår. Vi var främst jägare men åt även de växter som vi kunde hitta. <a href="http://www.so-rummet.se/kategorier/historia/manniskans-forhistoria-och-stenaldern#" target="_blank" class="source light"><span class="glyphicon glyphicon-share-alt"></span> Källa</a></p>
+            <h2>...och även vapen</h2>
+            <p>Människan är varken köttätare eller växtätare, vi är däremot allätare. Det betyder att vi själva kan välja mellan att äta andra djur eller vegetabilisk föda. <a href="http://www.ne.se/uppslagsverk/encyklopedi/l%C3%A5ng/all%C3%A4tare" target="_blank" class="source light"><span class="glyphicon glyphicon-share-alt"></span> Källa</a></p>
+            <p>Tillvaron under äldre stenåldern (ca 40 000-10 000 f.Kr) styrdes helt och hållet av jakten på föda vilket gjorde att vi följde bytesdjurens fotspår. <a href="http://www.so-rummet.se/kategorier/historia/manniskans-forhistoria-och-stenaldern#" target="_blank" class="source light"><span class="glyphicon glyphicon-share-alt"></span> Källa</a></p>
           </div>
         </div>
       </div>
@@ -171,7 +171,7 @@
         </div>
         <div class="col-sm-7 col-sm-offset-0 col-md-7 col-md-offset-1">
           <div class="text">
-            <h2>Vi började odla vår egen mat</h2>
+            <h2>Vi började odla vår egen mat...</h2>
             <p>För omkring 12 000 år sedan lärde vi oss att odla och blev jordbrukare. Inte längre behövde vi jaga vår föda, vi kunde odla den själv. <a href="http://www.so-rummet.se/kategorier/historia/manniskans-forhistoria-och-stenaldern#" target="_blank" class="source light"><span class="glyphicon glyphicon-share-alt"></span> Källa</a></p>
           </div>
         </div>
@@ -188,8 +188,8 @@
         </div>
         <div class="col-sm-7 col-sm-offset-0 col-md-7 col-md-offset-1">
           <div class="text">
-            <h2>Men vi behöll djuren som boskap</h2>
-            <p>Vi blev bofasta och kunde ordna tillvaron på ett effektivare sätt, men vi behöll djuren som boskap. Vi gjorde dom tama och fortsatte att äta dom. <a href="http://www.so-rummet.se/kategorier/historia/manniskans-forhistoria-och-stenaldern#" target="_blank" class="source light"><span class="glyphicon glyphicon-share-alt"></span> Källa</a></p>
+            <h2>...men vi behöll djuren som boskap</h2>
+            <p>Vi blev bofasta och kunde ordna tillvaron på ett effektivare sätt, men behöll djuren som boskap. Vi gjorde dem tama och fortsatte att äta dom. <a href="http://www.so-rummet.se/kategorier/historia/manniskans-forhistoria-och-stenaldern#" target="_blank" class="source light"><span class="glyphicon glyphicon-share-alt"></span> Källa</a></p>
           </div>
         </div>
       </div>
@@ -273,10 +273,10 @@
             <img src="assets/img/profile_cow.svg" alt="Ko illustration" class="primary_img showMobile">
             <h2>First up, kossan</h2>
             <p>Hon kallas även för nötdjur. Ordet nöt kommer från det forngermanska ordet ‘nauta’, vilket betyder egendom. <a href="http://g3.spraakdata.gu.se/saob/show.phtml?filenr=1/170/216.html" target="_blank" class="source dark"><span class="glyphicon glyphicon-share-alt"></span> Källa</a></p>
-            <p>Deras kött kommer att användas för att tillverka hamburgare, filéer och kalvkotletter.</p> 
-            <p>Förutom det så insemineras kor med sperma för att föda kalvar. På så sätt kan de fortsätta producera mjölk. Mjölken används sedan för att producera mejeriprodukter.</p>
+            <p>Deras kött kommer att användas för att bland annat tillverka hamburgare, filéer och kalvkotletter.</p> 
+            <p>Förutom det så insemineras kor med sperma för att föda kalvar. På så sätt kan de fortsätta producera mjölk. Mjölken används sedan för att producera mejeriprodukter. <a href="http://mjolken.se" target="_blank" class="source dark"><span class="glyphicon glyphicon-share-alt"></span> Källa</a></p>
             <hr>
-            <p>Kalven slaktas efter <strong>18 månader</strong> <a href="http://www.djurensratt.se/vara-fragor/djur-i-livsmedelsindustrin/kor-kalvar-tjurar" target="_blank" class="source dark"><span class="glyphicon glyphicon-share-alt"></span> Källa</a></p>
+            <p>Slaktas efter <strong>18 månader</strong> <a href="http://www.djurensratt.se/vara-fragor/djur-i-livsmedelsindustrin/kor-kalvar-tjurar" target="_blank" class="source dark"><span class="glyphicon glyphicon-share-alt"></span> Källa</a></p>
           </div>
         </div>
         <div class="col-xs-7 col-lg-8 text-center">
@@ -295,7 +295,7 @@
             <img src="assets/img/profile_lamb.svg" alt="Lamm illustration" class="primary_img showMobile">
             <h2>Lammen</h2>
             <p>Lammen behöver klippas varje år på grund av den extrema pälstillväxten. </p>
-            <p>Anledningen till att ullen växer så fort beror på att vi människor har avlat fram lammen till att göra det.</p>
+            <p>Anledningen till att ullen växer så fort beror på att vi människor har avlat fram lammen till att göra det.  <a href="http://www.djurensratt.se/vara-fragor/djur-i-livsmedelsindustrin/far-och-lamm" target="_blank" class="source dark"><span class="glyphicon glyphicon-share-alt"></span> Källa</a></p>
             <hr>
             <p>Slaktas efter <strong>6 månader</strong> <a href="http://www.djurensratt.se/vara-fragor/djur-i-livsmedelsindustrin/far-och-lamm" target="_blank" class="source dark"><span class="glyphicon glyphicon-share-alt"></span> Källa</a></p>
           </div>
@@ -316,7 +316,7 @@
             <img src="assets/img/profile_pig.svg" alt="Gris illustration" class="primary_img showMobile">
             <h2>Grisen</h2>
             <p>Den här krabaten har fått svansen avbiten, blivit kastrerad utan bedövning och lider av magsår. Grisen kommer bland annat att användas för bacon och fläsk, men också för gelatin, en vanlig tillsats i en del godisar, glassar och kosmetika.</p> 
-            <p>Han är ganska lik oss, precis som människan så är han allätare.</p>
+            <p>Han är ganska lik oss, och precis som människan så är han allätare. <a href="http://www.djurensratt.se/vara-fragor/djur-i-livsmedelsindustrin/grisar" target="_blank" class="source dark"><span class="glyphicon glyphicon-share-alt"></span> Källa</a></p>
             <hr>
             <p>Slaktas efter <strong>6 månader</strong> <a href="http://www.djurensratt.se/vara-fragor/djur-i-livsmedelsindustrin/grisar" target="_blank" class="source dark"><span class="glyphicon glyphicon-share-alt"></span> Källa</a></p>
           </div>
@@ -335,7 +335,7 @@
           <div class="text">
             <img src="assets/img/profile_chicken.svg" alt="Kyckling illustration" class="primary_img showMobile">
             <h2>Kycklingen</h2>
-            <p>Kycklingar kläcks i maskiner och får därför aldrig träffa sin mamma. Den här kycklingen delar boende tillsammans med några tusen andra kycklingar. <a href="http://www.djurensratt.se/vara-fragor/djur-i-livsmedelsindustrin/kor-kalvar-tjurar" target="_blank" class="source dark"><span class="glyphicon glyphicon-share-alt"></span> Källa</a></p>
+            <p>Kycklingar kläcks i maskiner och får därför aldrig träffa sina mammor. Den här kycklingen delar boende tillsammans med några tusen andra kycklingar. <a href="http://www.djurensratt.se/vara-fragor/djur-i-livsmedelsindustrin/kor-kalvar-tjurar" target="_blank" class="source dark"><span class="glyphicon glyphicon-share-alt"></span> Källa</a></p>
             <hr>
             <p>Slaktas efter <strong>5 veckor</strong>. Hankycklingar inom äggindustrin slaktas däremot <strong>direkt</strong> efter födseln <a href="http://sverigesradio.se/sida/artikel.aspx?programid=97&artikel=2761983" target="_blank" class="source dark"><span class="glyphicon glyphicon-share-alt"></span> Källa</a></p>
           </div>
@@ -378,7 +378,7 @@
                 <img src="assets/img/mobile_svt.svg" alt="Svt">
                 <content>
                 <div class="img"><img src="assets/img/icon_cow.svg"></div>
-                <h4>Anmälningar om plågade slaktdjur ökar</h4>
+                <h4><a href="http://www.svt.se/nyheter/regionalt/smalandsnytt/anmalningarna-for-plagade-slaktdjur-okar" target="_blank">Anmälningar om plågade slaktdjur ökar</a></h4>
                 <p><a href="http://www.svt.se/nyheter/regionalt/smalandsnytt/anmalningarna-for-plagade-slaktdjur-okar" target="_blank">Läs mer på SVT.se</a></p>
                 </content>
               </div>
@@ -386,7 +386,7 @@
                 <img src="assets/img/mobile_dn.svg" alt="Svt">
                 <content>
                 <div class="img"><img src="assets/img/icon_chicken.svg"></div>
-                <h4>Tusentals kycklingar dog av värmen</h4>
+                <h4><a href="http://www.dn.se/nyheter/sverige/tusentals-kycklingar-dog-av-varmen/" target="_blank">Tusentals kycklingar dog av värmen</a></h4>
                 <p><a href="http://www.dn.se/nyheter/sverige/tusentals-kycklingar-dog-av-varmen/" target="_blank">Läs mer på DN.se</a></p>
                 </content>
               </div>
@@ -450,7 +450,7 @@
         <div class="col-sm-6">
           <div class="text">
             <h2>Dessutom går <span class="procent"><span class="counter notranslate">90</span>%</span> av biomassan förlorad genom djuren</h2>
-            <p>För varje steg i näringspyramiden så går energi förlorad. Det beror på att djuren förbrukar upp biomassan för att producera värme åt sig själv bland annat. </p>
+            <p>För varje steg i näringskedjan så går energi förlorad. Det beror på att djuren förbrukar biomassan för att bland annat producera värme åt sig själva.</p>
             <p>Näringskedjor har vanligtvis endast tre eller fyra nivåer på grund av detta. <a href="http://publications.lib.chalmers.se/records/fulltext/72641.pdf" target="_blank" class="source dark"><span class="glyphicon glyphicon-share-alt"></span> Källa</a></p>
           </div>
         </div>
@@ -492,7 +492,7 @@
         <div class="col-sm-6 col-sm-offset-3">
           <div class="text">
             <h2>Bedövningen</h2>
-            <p>All slakt i Sverige utförs med bedövning, inklusive religiös slakt så som Halal. Sedan finns det utländskt kött som inte följer dessa lagar. En av orsakerna till att inte använda bedövning är på grund av ekonomiska skäl. Det är billigare helt enkelt. <a href="http://www.djurensratt.se/internationellt-arbete/las-mer/slakt-utan-bedovning" target="_blank" class="source light"><span class="glyphicon glyphicon-share-alt"></span> Källa</a></p>
+            <p>All slakt i Sverige ska enligt lag utföras med bedövning, inklusive religiös slakt (t.ex Halal). Slakt som sker utomlands följer inte svensk lag och kan därför vara annorlunda. En av orsakerna till att inte använda t.ex bedövning är ekonomiska skäl. Det är helt enkelt billigare. <a href="http://www.djurensratt.se/internationellt-arbete/las-mer/slakt-utan-bedovning" target="_blank" class="source light"><span class="glyphicon glyphicon-share-alt"></span> Källa</a></p>
           </div>
         </div>
       </div>
@@ -506,7 +506,7 @@
         <div class="col-sm-6 col-sm-offset-3">
           <div class="text text-center">
             <h3><strong>Elbedövning</strong></h3>
-            <p>Vanligaste bedövningsmetoden för kycklingar är elbedövning. Kycklingen hängs upp och ner i fötterna och doppas sedan ner i en strömfarande tank med vatten. <a href="http://www.djurensratt.se/vara-fragor/djur-i-livsmedelsindustrin/kycklingar" target="_blank" class="source light"><span class="glyphicon glyphicon-share-alt"></span> Källa</a></p>
+            <p>Den vanligaste bedövningsmetoden för kycklingar är elbedövning. Kycklingen hängs upp och ner i fötterna och doppas sedan ner i en tank med strömfarande vatten. <a href="http://www.djurensratt.se/vara-fragor/djur-i-livsmedelsindustrin/kycklingar" target="_blank" class="source light"><span class="glyphicon glyphicon-share-alt"></span> Källa</a></p>
           </div>
         </div>
       </div>
@@ -586,8 +586,8 @@
         <div class="col-sm-6 col-sm-offset-3">
           <div class="text">
             <h2>Vidare till försäljning</h2>
-            <p class="preamble">Djuret skärs upp och säljs vidare</p>
-            <p>Köttet åker vidare till skolor, restauranger och mataffärer. I många skolor och dagis är kött ett förstahandsval idag. Det betyder att barn aktivt måste be om djurfri mat om de inte vill äta kött.</p>
+            <p class="preamble">Djuret styckas upp och säljs vidare</p>
+            <p>Köttet åker vidare till skolor, restauranger och mataffärer. I många skolor och dagis är kött idag ett förstahandsval. Det betyder att barn aktivt själva måste be om djurfri mat om de inte vill äta kött.</p>
           </div>
         </div>
       </div>
@@ -618,9 +618,9 @@
           <div class="text-center">
             <img src="assets/img/vegan.svg">
             <h2>Andra alternativ?</h2>
-            <p class="preamble">Veganskt kött innehåller inga andra djur</p>
+            <p class="preamble">Veganska alternativ innehåller inga djur</p>
             <hr>
-            <p>Märken så som <a href="http://oumph.se/" target="_blank">Oumph</a>, <a href="http://anamma.eu/" target="_blank">Anamma</a>, <a href="http://astridochaporna.se/" target="_blank">Astrid & Aporna</a>, <a href="http://www.frysvegetarian.se/" target="_blank">Fry’s</a>, <strong>Goodsoy</strong> och många fler producerar redan alternativ till kött, fågel och fisk. De är näringsrika och säljs nästan överallt.</p>
+            <p>Märken så som <a href="http://oumph.se/" target="_blank">Oumph</a>, <a href="http://anamma.eu/" target="_blank">Anamma</a>, <a href="http://astridochaporna.se/" target="_blank">Astrid & Aporna</a>, <a href="http://www.frysvegetarian.se/" target="_blank">Fry’s</a>, <strong>Goodsoy</strong> och många fler producerar redan alternativ till kött, fågel och fisk. De är näringsrika och säljs över hela landet.</p>
           </div>
         </div>
       </div>
@@ -635,7 +635,7 @@
           <div class="text-center">
             <div class="text">
               <h2><span class="counter">5626</span> Röster</h2>
-              <h3>Tänker du att välja bort animaliskt kött?</h3>
+              <h3>Tänker du att välja bort köttet?</h3>
               <a href="#" class="btn btn-primary">Ja</a>
               <a href="#" class="btn btn-primary">Kanske</a>
               <a href="#" class="btn btn-primary">Nej</a>
@@ -655,17 +655,21 @@
             <div class="text">
               <h2>Du har makten</h2>
               <p class="preamble">Du kan påverka</p>
-              <p>När du står i mataffären, restaurangen eller skolmatsalen imorgon har du makten att påverka framtiden. Tack för att du finns!</p>
-              <p>Vi önskar dig en fortsatt fin dag :)</p>
+              <p>Imorgon, när du står i mataffären, restaurangen eller skolmatsalen, har du makten att påverka framtiden. Tack för att du finns!</p>
             </div>
-            <a href="https://www.facebook.com/kottet.se" class="btn btn-secondary">Gilla</a> 
-            <a href="" class="btn btn-secondary">Dela på Twitter</a>
+            <a href="https://www.facebook.com/kottet.se" class="btn btn-secondary"><span class="glyphicon glyphicon-heart"></span> Gilla</a> 
+            <a href="" class="btn btn-secondary"><span class="glyphicon glyphicon-globe"></span> Dela på Twitter</a>
           </div>
         </div>
       </div>
     </div>
   </div>
 
+  <footer>
+    <p>Designad och berättad av <a href="http://facebook.se/vegosvar" target="_blank">Vegosvar</a> - Vi levererar enkla svar på vegofrågor</p>
+    <hr>
+    <p><small><a href="http://creativecommons.org/publicdomain/zero/1.0/deed.sv" target="_blank">Licens CC0</a> | <a href="https://github.com/vegosvar/kottet">Köttet på Github</a> | Ser du något fel? Kontakta oss på <a href="mailto:kontakt@kottet.se">kontakt@kottet.se</a></small>
+  </footer>
 
 </body>
 </html>
