The astronaut update

--- a/src/index.html
+++ b/src/index.html
@@ -75,6 +75,7 @@
         <div class="col-md-10 col-md-offset-1 col-lg-12 col-lg-offset-0  text-center">
 
           <img src="assets/img/moon.svg" class="moon">
+          <img src="assets/img/astronaut.svg" class="astronaut">
 
           <div class="stars pos1">
             <div class="star"></div>
