--- a/src/index.html
+++ b/src/index.html
@@ -636,7 +636,7 @@
           <div class="text-center">
             <div class="text">
               <h2><span class="counter">5626</span> Röster</h2>
-              <h3>Tänker du att välja bort köttet?</h3>
+              <h3>Tänker du välja bort köttet?</h3>
               <a href="#" class="btn btn-primary">Ja</a>
               <a href="#" class="btn btn-primary">Kanske</a>
               <a href="#" class="btn btn-primary">Nej</a>
