Voting CSS/HTML

--- a/src/index.html
+++ b/src/index.html
@@ -637,9 +637,49 @@
             <div class="text">
               <h2><span class="counter">5626</span> Röster</h2>
               <h3>Tänker du välja bort köttet?</h3>
-              <a href="#" class="btn btn-primary">Ja</a>
-              <a href="#" class="btn btn-primary">Kanske</a>
-              <a href="#" class="btn btn-primary">Nej</a>
+
+              <div class="row voting">
+                <div class="col-xs-4">
+                  <div class="vote">
+                    <div class="item yes" style="height: 70%"><span>Ja</span></div>
+                  </div>
+                  <p>240</p>
+                </div>
+
+                <div class="col-xs-4">
+                  <div class="vote">
+                    <div class="item maybe" style="height: 20%"><span>Kanske</span></div>
+                  </div>
+                  <p>40</p>
+                </div>
+
+                <div class="col-xs-4">
+                  <div class="vote">
+                    <div class="item no" style="height: 10%"><span>Nej</span></div>
+                  </div>
+                  <p>19</p>
+                </div>
+              </div>
+
+              <div class="row form">
+                <div class="col-xs-4">
+                  <a href="#" class="btn btn-yes">Ja</a>
+                </div>
+                <div class="col-xs-4">
+                  <a href="#" class="btn btn-maybe">Kanske</a>
+                </div>
+                <div class="col-xs-4">
+                  <a href="#" class="btn btn-no">Nej</a>
+                </div>
+              </div>
+
+              <div class="answer">
+                <h3>Tack för din röst!</h3>
+              </div>
+
+              <hr>
+              <p class="note">Det här är endast en uppskattning på enskilda röster, då det finns möjlighet att rösta från olika enheter.</p>
+            
             </div>
           </div>
         </div>
