Minor changes in Voting

--- a/src/index.html
+++ b/src/index.html
@@ -683,7 +683,7 @@
               </div>
 
               <hr>
-              <p class="note">Det här är endast en uppskattning då vi kan inte garantera att personer nte har röstat mer än en gång.</p>
+              <p class="note">Det här är endast en uppskattning då vi kan inte garantera att personer inte har röstat mer än en gång.</p>
             </div>
           </div>
         </div>
