--- a/src/index.html
+++ b/src/index.html
@@ -60,9 +60,6 @@
 
   <header class="menu" role="navigation">
     <div class="container">
-      <div class="pull-left">
-        <a class="logo" href="https://kottet.se"><img src="assets/img/logo_inverted.svg"></a>
-      </div>
       <ul class="share">
         <li><a href="https://twitter.com/intent/tweet?hashtags=k%C3%B6ttet,svmat,svpol,svensktk%C3%B6tt&original_referer=https%3A%2F%2Fabout.twitter.com%2Fresources%2Fbuttons&text=Historien%20om%20k%C3%B6ttet&tw_p=tweetbutton&url=https%3A%2F%2Fkottet.se&via=kottet" target="_blank"><span class="hideMobile">Twittra om</span> #köttet</a></li>
         <li class="visible-sm visible-md visible-lg"><a href="https://facebook.com/kottet.se" target="_blank">Facebook</a></li>
@@ -100,7 +97,7 @@
           <h1>Berättelsen om köttet</h1>
           <p class="preamble">Varmt välkommen till berättelsen om den svenska köttindustrin</p>
           <p>Människan har utvecklats snabbt. Vi har rest till månen och uppfunnit selfiepinnen.<br/>Men något som lever kvar är vår köttkonsumtion. Vi bara älskar kött.</p> 
-          <p>Kött är för många en självklarhet, för andra är det en jobbig verklighet.<br/>Men vilka hemligheter döljer sig i det svenska köttet?</p>
+          <p>Kött är för många en självklarhet, för andra är det en jobbig verklighet.<br/>Men vilka hemligheter döljer det svenska köttet?</p>
 
           <img src="assets/img/hero_earth.svg" class="earth">
           <div class="iss pointer functional">
@@ -538,7 +535,7 @@
         <div class="col-sm-6 col-sm-offset-3">
           <div class="text text-center">
             <h3><strong>Koldioxidbedövning</strong></h3>
-            <p>Den vanligaste metoden för att bedöva grisar innan slakt är med gas.</p>
+            <p>Den vanligaste metoden för att bedöva grisar innan slakt är med gas. Grisarna drivs in i en hiss som sänks ned i ett schakt med koldioxid, där de sedan förlorar medvetandet. <a href="http://www.djurensratt.se/vara-fragor/djur-i-livsmedelsindustrin/grisar" target="_blank" class="source light"><span class="glyphicon glyphicon-share-alt"></span> Källa</a></p>
           </div>
         </div>
       </div>
@@ -559,8 +556,8 @@
         <div class="col-sm-6 col-sm-offset-3">
           <div class="text text-center">
             <h3><strong>Bedövning med bultpistol</strong></h3>
-            <p>Kor, kalvar och tjurar bedövas genom att skjutas i huvudet med en bultpistol. <a href="http://www.djurensratt.se/vara-fragor/djur-i-livsmedelsindustrin/kor-kalvar-tjurar" target="_blank" class="source light"><span class="glyphicon glyphicon-share-alt"></span> Källa</a></p>
-            <p>På bilden nedan ser ni en Cash Special Caliber 22</a>. <a href="http://nodslakt.se/Bultpistol.html" target="_blank" class="source light"><span class="glyphicon glyphicon-share-alt"></span> Källa</a></p>
+            <p>Kor, kalvar och tjurar bedövas genom att skjutas i huvudet med en bultpistol, på bilden nedan ser vi en Cash Special Caliber 22. <a href="http://nodslakt.se/Bultpistol.html" target="_blank" class="source light"><span class="glyphicon glyphicon-share-alt"></span> Källa</a></p> 
+            <p>På Jordbruksverket går det att läsa mer om användandet av bultpistoler. <a href="http://www2.jordbruksverket.se/webdav/files/SJV/trycksaker/Pdf_jo/jo09_14.pdf" target="_blank" class="source light"><span class="glyphicon glyphicon-share-alt"></span> Källa</a> </p>
           </div>
         </div>
       </div>
@@ -579,7 +576,8 @@
         <div class="col-sm-6 col-sm-offset-3">
           <div class="text">
             <h2>Avblodning</h2>
-            <p>Därefter får djuret halsen uppskuren. Blodet tappas av och djuret dör. Om avblodningen går alltför långsamt kan ett bedövat djur hinna återfå medvetandet innan avblodningen är avslutad.  <a href="http://www2.jordbruksverket.se/webdav/files/SJV/trycksaker/Pdf_jo/jo09_14.pdf" target="_blank" class="source light"><span class="glyphicon glyphicon-share-alt"></span> Källa</a></p>
+            <p class="preamble">Därefter får djuret halsen uppskuren</p> 
+            <p>Blodet tappas av och djuret dör. Om avblodningen går alltför långsamt kan ett bedövat djur hinna återfå medvetandet innan avblodningen är avslutad.  <a href="http://www2.jordbruksverket.se/webdav/files/SJV/trycksaker/Pdf_jo/jo09_14.pdf" target="_blank" class="source light"><span class="glyphicon glyphicon-share-alt"></span> Källa</a></p>
           </div>
         </div>
       </div>
@@ -711,7 +709,8 @@
   </div>
 
   <footer>
-    <p>Designad och berättad av <a href="http://facebook.se/vegosvar" target="_blank">Vegosvar</a> - Vi levererar enkla svar på vegofrågor</p>
+    <p><a href="http://vegosvar.se"><img src="assets/img/vegosvar_icon.svg"></a></p><br>
+    <p>Designad och berättad av <a href="http://vegosvar.se" target="_blank">Vegosvar</a> - Vi levererar enkla svar på vegofrågor</p>
     <hr>
     <p><small><a href="http://creativecommons.org/publicdomain/zero/1.0/deed.sv" target="_blank">Licens CC0</a> | <a href="https://github.com/vegosvar/kottet">Köttet på Github</a> | Ser du något fel? Kontakta oss på <a href="mailto:kontakt@kottet.se">kontakt@kottet.se</a></small>
   </footer>
