A bunch of updates

--- a/src/index.html
+++ b/src/index.html
@@ -272,6 +272,50 @@
     </div>
   </div>
 
+
+  <div class="del8extra">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-8 col-sm-offset-2">
+          <div class="text text-center">
+            <h2>Sverige är inte ensam om att slakta djur</h2>
+            <h3>USA slaktade <strong><span class="counter">9.1</span> miljarder</strong> djur 2013</h3>
+            <p class="source dark_underline"><a href="http://www.humanesociety.org/news/resources/research/stats_slaughter_totals.html" target="_blank" style="font-weight: 300;">USDA, National Agricultural Statistics Service</a></p>
+          </div>
+        </div>
+      </div>
+      <div class="stats">
+        <div class="row">
+          <div class="col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 col-lg-4 col-lg-offset-4">
+            <div class="row">
+              <div class="col-xs-6 usa">
+                <div class="stat">
+                  <div class="content" style="height: 100%;"><img src="assets/img/usa.svg"></div>
+                </div>
+                <div class="numbers">
+                  <span class="number">9,1 miljarder</span>
+                  <span class="animal">USA</span>
+                </div>
+              </div>
+              <div class="col-xs-6 sweden">
+                <div class="stat">
+                  <div class="content" style="height: 1%;"><img src="assets/img/sweden.svg"></div>
+                </div>
+                <div class="numbers">
+                  <span class="number">90 miljoner</span>
+                  <span class="animal">Sverige</span>
+                </div>
+              </div>
+            </div>
+            <hr/>
+            <p><small>Dessa uppgifter omfattar inte statistik över slakt av fisk, kräftdjur, kaniner eller andra produktionsdjur som USDA inte lämnar information om.</small></p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
   <div class="del9">
     <div class="container">
       <div class="row">
@@ -420,8 +464,9 @@
       <div class="row">
         <div class="col-sm-6">
           <div class="text">
-            <h2>Det påverkar vårt hem, Jorden</h2><p class="preamble">I en rapport från 2010 rekommenderar FN en minskad kött- och mejerikonsumtion. <a href="http://www.theguardian.com/environment/2010/jun/02/un-report-meat-free-diet" target="_blank" class="source dark"><span class="glyphicon glyphicon-share-alt"></span> Källa</a></p>
-            <p>Den globala kött- och mejeriindustrin står för <strong>70%</strong> av den globala sötvattenskonsumtionen, <strong>38%</strong> av den totala landanvändningen och <strong>19%</strong> av världens växthusgasutsläpp.</p>
+            <h2>Det påverkar vårt hem, Jorden</h2><p class="preamble">I en rapport från 2010 rekommenderar FN en minskad kött- och mejerikonsumtion
+            <p>Den globala kött- och mejeriindustrin står för <strong class="water">70%</strong> av den globala sötvattenskonsumtionen (drickbart vatten), <strong class="land">38%</strong> av den totala landanvändningen och <strong class="gas">19%</strong> av världens växthusgasutsläpp. <a href="http://www.theguardian.com/environment/2010/jun/02/un-report-meat-free-diet" target="_blank" class="source dark"><span class="glyphicon glyphicon-share-alt"></span> Källa</a></p>
+            <p>Det är mer än det globala växthusgasutsläppet orsakat av transportmedel på 13%. <a href="http://www.epa.gov/climatechange/ghgemissions/global.html" target="_blank" class="source dark"><span class="glyphicon glyphicon-share-alt"></span> Källa</a></p>
           </div>
         </div>
         <div class="col-sm-6 text-center">
@@ -549,7 +594,6 @@
   </div>
 
 
-
   <div class="del21">
     <div class="container">
       <div class="row">
@@ -595,7 +639,7 @@
           <div class="text">
             <h2>Vidare till försäljning</h2>
             <p class="preamble">Djuret styckas upp och säljs vidare</p>
-            <p>Köttet åker vidare till skolor, restauranger och mataffärer. I många skolor och dagis är kött idag ett förstahandsval. Det betyder att barn aktivt själva måste be om djurfri mat om de inte vill äta kött.</p>
+            <p>Köttet åker vidare till skolor, restauranger och mataffärer. I många skolor och dagis är kött ett förstahandsval idag. Det betyder att barn själva måste be om djurfri mat om de inte vill äta kött.</p>
           </div>
         </div>
       </div>
@@ -663,7 +707,7 @@
                 <div class="col-xs-4">
                   <div class="vote">
                     <div class="item no" style="height: 0%"><span>Nej</span></div>
-                  </div>
+                  </div> 
                   <p class="percentage no">0</p>
                 </div>
               </div>
@@ -710,7 +754,7 @@
 
   <footer>
     <p><a href="http://vegosvar.se"><img src="assets/img/vegosvar_icon.svg"></a></p><br>
-    <p>Designad och berättad av <a href="http://vegosvar.se" target="_blank">Vegosvar</a> - Vi levererar enkla svar på vegofrågor</p>
+    <p>Designad och berättad av <a href="http://vegosvar.se" target="_blank">Vegosvar</a> - Enkla svar på vegofrågor</p>
     <hr>
     <p><small><a href="http://creativecommons.org/publicdomain/zero/1.0/deed.sv" target="_blank">Licens CC0</a> | <a href="https://github.com/vegosvar/kottet">Köttet på Github</a> | Ser du något fel? Kontakta oss på <a href="mailto:kontakt@kottet.se">kontakt@kottet.se</a></small>
   </footer>
