--- a/src/index.html
+++ b/src/index.html
@@ -322,7 +322,7 @@
         <div class="col-sm-5 col-lg-4">
           <div class="text">
             <img src="assets/img/profile_cow.svg" alt="Ko illustration" class="primary_img showMobile">
-            <h2>First up, kossan</h2>
+            <h2>Vi börjar med kossan</h2>
             <p>Hon kallas även för nötdjur. Ordet nöt kommer från det forngermanska ordet ‘nauta’, vilket betyder egendom. <a href="http://g3.spraakdata.gu.se/saob/show.phtml?filenr=1/170/216.html" target="_blank" class="source dark"><span class="glyphicon glyphicon-share-alt"></span> Källa</a></p>
             <p>Deras kött kommer att användas för att bland annat tillverka hamburgare, filéer och kalvkotletter.</p> 
             <p>Förutom det så insemineras kor med sperma för att föda kalvar. På så sätt kan de fortsätta producera mjölk. Mjölken används sedan för att producera mejeriprodukter. <a href="http://mjolken.se" target="_blank" class="source dark"><span class="glyphicon glyphicon-share-alt"></span> Källa</a></p>
