--- a/src/index.html
+++ b/src/index.html
@@ -293,7 +293,7 @@
                   <div class="content" style="height: 100%;"><img src="assets/img/usa.svg"></div>
                 </div>
                 <div class="numbers">
-                  <span class="number">9,1 miljarder</span>
+                  <span class="number"><span class="counter">9.1</span> miljarder</span>
                   <span class="animal">USA</span>
                 </div>
               </div>
@@ -302,7 +302,7 @@
                   <div class="content" style="height: 1%;"><img src="assets/img/sweden.svg"></div>
                 </div>
                 <div class="numbers">
-                  <span class="number">90 miljoner</span>
+                  <span class="number"><span class="counter">90</span> miljoner</span>
                   <span class="animal">Sverige</span>
                 </div>
               </div>
